--- a/Nodejs_Server/package.json
+++ b/Nodejs_Server/package.json
@@ -5,8 +5,10 @@
   "main": "mysqltest.js",
   "dependencies": {
     "echarts": "^3.4.0",
+    "emailjs": "^1.0.8",
     "express": "^4.15.2",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "node-schedule": "^1.2.1"
   },
   "devDependencies": {},
   "scripts": {
